// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Reference Reference Type (Generic) 1`] = `
"FROM:
type A<T> = string | T; type B = A<number>;

--------------------------------------------------------
TO:
'use strict';

var _flowtypeHelpers = _interopRequireDefault(
  require('@manta-style/flowtype-helpers'),
);

var _runtime = _interopRequireDefault(require('@manta-style/runtime'));

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : { default: obj };
}

var A = _runtime.default.TypeAliasDeclaration(
  'A',
  function(typeFactory) {
    var T = typeFactory.TypeParameter('T');

    var type = _runtime.default.UnionType([_runtime.default.StringKeyword, T]);

    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);

var B = _runtime.default.TypeAliasDeclaration(
  'B',
  function(typeFactory) {
    var type = A.argumentTypes([_runtime.default.NumberKeyword]);
    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);
"
`;

exports[`Type Reference Reference Type (Non-generic) 1`] = `
"FROM:
type A = string; type B = A;

--------------------------------------------------------
TO:
'use strict';

var _flowtypeHelpers = _interopRequireDefault(
  require('@manta-style/flowtype-helpers'),
);

var _runtime = _interopRequireDefault(require('@manta-style/runtime'));

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : { default: obj };
}

var A = _runtime.default.TypeAliasDeclaration(
  'A',
  function(typeFactory) {
    var type = _runtime.default.StringKeyword;
    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);

var B = _runtime.default.TypeAliasDeclaration(
  'B',
  function(typeFactory) {
    var type = A;
    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);
"
`;
